test/patterns/s0561_array_partition_i/hafis/starchat/jml_syntax_checking.txt
./test/s0561_array_partition_i/hafis/starchat/Solution.java:11: error: bad operand types for binary operator '<='
//@ requires(\forall int i; 0 <= i < nums.length; ((nums <= 10000) && (nums >= -10000)));
                                                         ^
  first type:  int[]
  second type: int
./test/s0561_array_partition_i/hafis/starchat/Solution.java:11: error: bad operand types for binary operator '>='
//@ requires(\forall int i; 0 <= i < nums.length; ((nums <= 10000) && (nums >= -10000)));
                                                                            ^
  first type:  int[]
  second type: int
2 errors
